...
    
    func show(quiz result: QuizResultsViewModel, completion: @escaping () -> Void) {
        let alertResult = AlertModel(
            title: result.title,
            message: result.message,
            buttonText: result.buttonText,
            accessibilityIdentifier: "Results",
            completion: completion)
        
        alertPresenter = AlertPresenter(delegate: self)
        alertPresenter?.showAlert(model: alertResult)
    }
    
...
